<resources>
    <string name="app_name">轉轉寳</string>
    <string name="login_name01">快速</string>
    <string name="login_name02">安全</string>
    <string name="login_name03">請輸入您的手機號</string>
    <string name="login_name04">請輸入密碼</string>
    <string name="login_name05">記住賬號和密碼</string>
    <string name="login_name06">登入</string>
    <string name="login_name07">註冊</string>
    <string name="login_name08">忘記密碼?</string>
    <string name="login_name09">國家/地區</string>
    <string name="register_name01">姓名</string>
    <string name="register_name02">請輸入您的姓名</string>
    <string name="register_name03">手機(賬號)</string>
    <string name="register_name04">賬號限手機號碼</string>
    <string name="register_name05">手機驗證</string>
    <string name="register_name06">獲取驗證碼</string>
    <string name="register_name07">密碼</string>
    <string name="register_name08">請設置密碼</string>
    <string name="register_name09">確認密碼</string>
    <string name="register_name10">確認設置密碼</string>
    <string name="register_name11">註冊來源</string>
    <string name="register_name12">請選擇註冊來源</string>
    <string name="register_name13">同意《大臺北外匯綱》服務條款</string>
    <string name="register_name14">註冊會員</string>
    <string name="register_name15">請輸入驗證碼</string>
    <string name="register_name16">介紹人姓名</string>
    <string name="register_name17">介紹人電話</string>
    <string name="register_name18">請輸入姓名</string>
    <string name="register_name19">請輸入電話</string>
    <string name="forgetpwd_name01">取回密碼</string>
    <string name="forgetpwd_name02">手機(賬號)</string>
    <string name="forgetpwd_name03">賬號限手機號碼</string>
    <string name="forgetpwd_name04">手機驗證</string>
    <string name="forgetpwd_name05">獲取驗證碼</string>
    <string name="forgetpwd_name06">新密碼</string>
    <string name="forgetpwd_name07">請設置新密碼</string>
    <string name="forgetpwd_name08">確認密碼</string>
    <string name="forgetpwd_name09">確認設置密碼</string>
    <string name="forgetpwd_name10">取回密碼</string>
    <string name="main_name01">首頁</string>
    <string name="main_name02">賺賺寶</string>
    <string name="main_name03">聊天</string>
    <string name="main_name04">我的</string>
    <string name="home_name01">轉轉寳</string>
    <string name="home_name02">★本站嚴正聲明：本站所提供一切資訊只供會員參考之用，若有不法交易觸犯當地法令事宜，概與本站無關。</string>
    <string name="home_name03">轉轉豆比數</string>
    <string name="home_name04">更多比數兌換</string>
    <string name="home_name05">賣出</string>
    <string name="home_name06">轉轉豆</string>
    <string name="home_name07">充值</string>
    <string name="home_name08">代付</string>
    <string name="home_name09">預購</string>
    <string name="home_name10">我的賺賺寶</string>
    <string name="home_name11">了解更多</string>
    <string name="home_name12">09-01 賺賺寶收益</string>
    <string name="home_name13">年紅利 4.490%</string>
    <string name="home_name14">可以怎樣用</string>
    <string name="home_name15">帶妳了解大臺北外匯賺賺寶的收益</string>
    <string name="home_name16">收入記錄</string>
    <string name="home_name17">支出記錄</string>
    <string name="home_name18">09-01 賺賺寶提領</string>
    <string name="home_name19">總計賺賺寶 6575.80</string>
    <string name="home_name20">精品推薦</string>
    <string name="home_name21">為妳推薦淘寶、天貓優質商品</string>
    <string name="home_name22">手握先機，</string>
    <string name="home_name23">才是贏家</string>
    <string name="home_name24">精品推薦，領卷大優惠</string>
    <string name="home_name25">09-01 購買賺賺寶</string>
    <string name="home_name26">年紅利 0.001%</string>
    <string name="currency_name01">賣出</string>
    <string name="currency_name02">買進</string>
    <string name="currency_name03">支付寶充值</string>
    <string name="currency_name04">代付</string>
    <string name="currency_name05">預購</string>
    <string name="currency_name06">幣別</string>
    <string name="currency_name07">人民幣</string>
    <string name="currency_name08">支付幣別:</string>
    <string name="currency_name09">台幣</string>
    <string name="currency_name10">最新比數:</string>
    <string name="currency_name11">類型:</string>
    <string name="currency_name12">淘寶代付</string>
    <string name="currency_name13">請輸入點數:</string>
    <string name="currency_name14">可換算台幣:</string>
    <string name="currency_name15">實付台幣金額:</string>
    <string name="currency_name16">手續費:</string>
    <string name="currency_name17">註:人民幣匯款不滿30000元，需加收比例1%手續費上限50元，交易30000元以上不收手續費</string>
    <string name="currency_name18">送出</string>
    <string name="currency_name19">賣出點數</string>
    <string name="currency_name20">買進點數</string>
    <string name="currency_name21">賣出點數:</string>
    <string name="currency_name22">買進點數</string>
    <string name="currency_name23">註:支付寶充值1000元以下需加收10元人民幣手續費</string>
    <string name="currency_name24">充值</string>
    <string name="currency_name25">存放時間:</string>
    <string name="currency_name26">選擇</string>
    <string name="currency_name27">註:人民幣匯款不滿30000元，需加收比例1%手續費上限50元，交易30000元以上不收手續中遠期到期日必須是交易雙方的工作日，如遇節假日則順延至
    下壹個工作日。★預購可以提前解約，不收取任何費用，依下單日比數結算</string>
    <string name="currency_name28">充值</string>
    <string name="exchange_name01">轉轉豆兌換</string>
    <string name="exchange_name02">人民幣</string>
    <string name="exchange_name03">美元</string>
    <string name="exchange_name04">韓元</string>
    <string name="exchange_name05">日元</string>
    <string name="exchange_name06">泰銖</string>
    <string name="exchange_name07">港幣</string>
    <string name="exchange_name08">120秒後刷新</string>
    <string name="exchange_name09">取消</string>
    <string name="greenteahy_name01">賺賺寶</string>
    <string name="greenteahy_name02">總計賺賺寶</string>
    <string name="greenteahy_name03">昨日紅利</string>
    <string name="greenteahy_name04">年紅利 4.00%</string>
    <string name="greenteahy_name05">累計紅利</string>
    <string name="greenteahy_name06">賺賺寶</string>
    <string name="greenteahy_name07">轉賬</string>
    <string name="greenteahy_name08">收入記錄</string>
    <string name="greenteahy_name09">支出記錄</string>
    <string name="greenteahy_name10">購買</string>
    <string name="greenteahy_name11">提領/提現</string>
    <string name="chat_name01">聯系人</string>
    <string name="chat_name02">通訊錄</string>
    <string name="chat_name03">聯系人</string>
    <string name="chat_name04">好友</string>
    <string name="chat_name05">在線客服</string>
    <string name="chat_name06">新的朋友</string>
    <string name="chat_name07">好友群</string>
    <string name="chat_name08">聯系人</string>
    <string name="chat_name09">聯系人</string>
    <string name="chat_name10">聯系人</string>
    <string name="me_name01">用戶信息</string>
    <string name="me_name02">高樂</string>
    <string name="me_name03">13515547412</string>
    <string name="me_name04">申請日期:2017-09-15 12:35:03</string>
    <string name="me_name05">最後登錄:2017-09-15 12:35:03</string>
    <string name="me_name07">實名認證</string>
    <string name="me_name08">我的紅包</string>
    <string name="me_name09">賺賺寶</string>
    <string name="me_name10">銀行卡</string>
    <string name="me_name11">安全設置</string>
    <string name="me_name12">退出登錄</string>
    <string name="me_name13">實名認證</string>
    <string name="me_name14">安全設置</string>
    <string name="me_name15">支付密碼設置</string>
    <string name="me_name16">臉部信息收集</string>
    <string name="me_name17">個人信息</string>
    <string name="me_name18">修改密碼</string>
    <string name="me_name19">更新版本</string>
    <string name="me_name20">安全設置</string>
    <string name="me_name21">基本資料</string>
    <string name="me_name22">(必填)</string>
    <string name="me_name23">姓名:</string>
    <string name="me_name24">請輸入您的真實姓名</string>
    <string name="me_name25">身份證號碼:</string>
    <string name="me_name26">請輸入您的身份證號碼</string>
    <string name="me_name27">銀行卡號:</string>
    <string name="me_name28">請輸入您的銀行卡號</string>
    <string name="me_name29">預留手機:</string>
    <string name="me_name30">請輸入手機號碼</string>
    <string name="me_name31">驗證碼:</string>
    <string name="me_name32">請輸入驗證碼</string>
    <string name="me_name33">發送驗證碼</string>
    <string name="me_name34">上傳身份證明</string>
    <string name="me_name35">確認</string>
    <string name="me_name36">添加</string>
    <string name="me_name37">銀行卡</string>
    <string name="me_name38">發送驗證碼</string>
    <string name="me_name39">訂單查詢</string>
    <string name="me_name40">支付密碼修改</string>
    <string name="me_name41">重置支付密碼</string>
    <string name="me_name42">請輸入您的卡號</string>
    <string name="me_name43">在線客服</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank_name1">請選擇添加的賬號類型</string>
    <string name="bank_name2">大陸銀行</string>
    <string name="bank_name3">臺灣銀行</string>
    <string name="bank_name4">支付寶賬號</string>
    <string name="bank_name5">微信賬號</string>
    <string name="bank_name6">請輸入賬號的戶名</string>
    <string name="bank_name7">請輸入銀行的名稱</string>
    <string name="bank_name8">請輸入銀行所屬省份</string>
    <string name="bank_name9">請輸入銀行所屬支行</string>
    <string name="bank_name10">銀行名稱：</string>
    <string name="bank_name11">銀行所屬省份:</string>
    <string name="bank_name12">銀行所屬支行:</string>
    <string name="bank_name13">提交</string>
    <string name="bank_name14">請選擇賬號類型</string>
    <string name="bank_name15">銀行類型</string>
    <string name="bank_name16">請輸入銀行的名稱/支行</string>
    <string name="bank_name17">請輸入銀行代號</string>
    <string name="bank_name18">銀行名稱/支行</string>
    <string name="bank_name19">銀行代號</string>
    <string name="bank_name20">請選擇提領方式</string>
    <string name="bank_name21">請選擇充值方式</string>
    <string name="bank_name22">銀行名稱/分行</string>
    <string name="bank_name23">請輸入銀行的名稱/分行</string>
    <string name="main_name">融云</string>
    <string name="main_conversation">会话</string>
    <string name="main_group">广场</string>
    <string name="main_chatroom">通讯录</string>
    <string name="main_customer">意见反馈</string>
    <string name="main_customer_xn">小能客服</string>
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>
    <string name="scan_one_scan">掃壹掃</string>
    <string name="add_select_group">创建群组</string>
    <string name="set_personal_information">我的账号</string>
    <string name="set_news_reminded">新消息提醒</string>
    <string name="set_privacy">隐私</string>
    <string name="set_set">设置</string>
    <string name="set_rongcloud">关于 SealTalk</string>
    <string name="set_logout">注销</string>
    <string name="de_save">"保存"</string>
    <string name="scan_fail">掃描失敗</string>
    <string name="no_read_message">"···"</string>
    <string name="open_camera_error">打開相機出錯</string>
    <string name="login_success">"登錄成功"</string>
    <string name="this_account_was_your_friend">該用護已經是您的好友</string>
    <string name="postscript_tip">妳需要發送驗證申請，等對方通過</string>
    <string name="new_message_notice">開啟消息免打擾</string>
    <string name="new_message_show">新消息通知</string>
    <string name="new_message_voice">聲音</string>
    <string name="new_message_vibration">震動</string>
    <string name="new_message_prompt_voice">新消息提示音</string>
    <string name="new_message_follow_system">跟隨系統</string>
    <string name="friend_confirmation">加我好友時需要驗證</string>
    <string name="the_blacklist">黑名單</string>
    <string name="join_the_blacklist">加入黑名單</string>
    <string name="blacklist_empty">黑名單為空</string>
    <string name="portrait">頭像</string>
    <string name="my_username">昵稱</string>
    <string name="update_log">更新日誌</string>
    <string name="function_introduce">功能介紹</string>
    <string name="version_number">V2.1.0</string>
    <string name="dv_document">開發者文檔</string>
    <string name="rongcloud_web">官方網站</string>
    <string name="new_version_update">當前版本</string>
    <string name="de_notification_start">開始時間</string>
    <string name="de_notification_end">結束時間</string>
    <string name="de_item_delete_friend">"刪除"</string>
    <string name="de_actionbar_myacc">"個人賬號"</string>
    <string name="de_actionbar_sub_group">"群組"</string>
    <string name="de_actionbar_sub_private">"我的私人會話"</string>
    <string name="de_actionbar_sub_discussion">"我的討論組"</string>
    <string name="de_actionbar_sub_system">"系統消息"</string>
    <string name="de_actionbar_sub_defult">"聊天"</string>
</resources>